# qlik.dev

./: .gitignore  LICENSE  README.md  generate-report.py  package-lock.json  package.json  pyproject.toml  qcdi-clean-project.py  qlikcloud.env.example
apps/: bookmarks.js  createapp.py  list_apps.py
audits/: get-audits.py
items/: clean-datasets.py
lineage/: get-lineage.js
reloads/: post-reload.py
reports/: generate-report.py
src/: __init__.py  apps-create.py  apps-list.py  apps-metadata.py  datafiles-list-orphan.py  datafiles-list.py  datafiles-remove-orphan.py  dummy.py  items-delete.py  knowledgebases-list.py  main.py  qcdi-clean-empty-project.py  qcdi-clean-project.py  qcdi-project-clean.py  qcdi-project-list-tasks.py  qcdi-project-stop-tasks.py  qcdi-projects-list.py  report-generate-report.py  requirements.txt  users-list.py
src/apps/: create_app.py  list_apps.py
src/audits/: get-audits.py
src/lineage/: get-lineage.py  requirements.txt
src/qcdi/: qcdi-clean-project.py
src/qlikdev/: __init__.py  __main__.py  cli.py
src/qlikdev.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/qlikdev/apps/: __init__.py  list.py  metadata.py
src/qlikdev/common/: __init__.py  config.py  helpers.py
src/qlikdev/datafiles/: __init__.py  list.py  orphans.py
src/qlikdev/items/: __init__.py  delete.py
src/qlikdev/knowledgebases/: __init__.py  list.py
src/qlikdev/qcdi/: __init__.py  cleanup.py  projects.py  tasks.py
src/qlikdev/reports/: __init__.py  (+1 more)
src/reloads/: import json.py
src/utils/: config.py  helpers.py
(+2 files in other folders)
